# coldfront_djp_plugin

./: README.md  pyproject.toml
coldfront_djp_plugin/: __init__.py  apps.py  models.py  urls.py  views.py
coldfront_djp_plugin/migrations/: 0001_initial.py
coldfront_djp_plugin/templates/coldfront_djp_plugin/: demo.html
